# argparse-ng

./: .pre-commit-config.yaml  MAINTAINER.md  README.md  pyproject.toml  setup.py
.github/workflows/: beta.yml  main.yml  master.yml  tags.yml
examples/: simple.py
maintaner/: release.py
src/argparse_ng/: parser.py
src/argparse_plus/: __init__.py  extension.py  parser.py  tools.py
tests/: conftest.py  requirements.txt  test_cli.py  test_demo.py
