[build-system]
requires = [ "setuptools", "setuptools-github", "wheel" ]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools_github.*"
ignore_missing_imports = true


